changes to layout in the folder structure and some minor changes, ready to add content

--- a/book/some_content/first_model_run/interface.ipynb
+++ b/book/some_content/first_model_run/interface.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Interface\n",
     "\n",
-    "This is what the interface looks like.\n",
+    "Once you have logged in on the eWaterCycle machine, this is what the interface looks like.\n",
     "This notebook will have some code cells, but mostly pseudo-code to illustrate the interface."
    ],
    "id": "dc56c56ed744a678"
