change of name for the caravan forcing

--- a/book/some_content/forcing/caravan_forcing.ipynb
+++ b/book/some_content/forcing/caravan_forcing.ipynb
@@ -5,12 +5,11 @@
    "id": "8fdc17152dd8e112",
    "metadata": {},
    "source": [
-    "# Generate Caravan Forcing\n",
+    "# Generate Camels Forcing using Caravan\n",
     "\n",
     "This notebook will give you all the details for getting CAMELS forcing from the Caravan dataset.\n",
     "\n",
     "in eWaterCycle we provide access to the Caravan dataset, which contains all of the above data for all the catchments in the different Camels datasets. There is a known problem with the caravan evaporation data keep that in mind!\n",
-    "\n",
     "\n",
     "Using the interactive maps at [eWaterCycle caravan map](https://www.ewatercycle.org/caravan-map/) one can easily retrieve the identifier of the catchment.\n",
     "\n",
@@ -156,20 +155,20 @@
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1;35mCaravanForcing\u001b[0m\u001b[1m(\u001b[0m\n",
-       "    \u001b[33mstart_time\u001b[0m=\u001b[32m'2000-08-01T00:00:00Z'\u001b[0m,\n",
-       "    \u001b[33mend_time\u001b[0m=\u001b[32m'2005-08-31T00:00:00Z'\u001b[0m,\n",
-       "    \u001b[33mdirectory\u001b[0m=\u001b[1;35mPosixPath\u001b[0m\u001b[1m(\u001b[0m\u001b[32m'/home/mmelotto/forcing/camelsgb_33039/caravan'\u001b[0m\u001b[1m)\u001b[0m,\n",
-       "    \u001b[33mshape\u001b[0m=\u001b[1;35mPosixPath\u001b[0m\u001b[1m(\u001b[0m\u001b[32m'/home/mmelotto/forcing/camelsgb_33039/caravan/camelsgb_33039.shp'\u001b[0m\u001b[1m)\u001b[0m,\n",
-       "    \u001b[33mfilenames\u001b[0m=\u001b[1m{\u001b[0m\n",
-       "        \u001b[32m'Q'\u001b[0m: \u001b[32m'camelsgb_33039_2000-08-01_2005-08-31_Q.nc'\u001b[0m,\n",
-       "        \u001b[32m'tas'\u001b[0m: \u001b[32m'camelsgb_33039_2000-08-01_2005-08-31_tas.nc'\u001b[0m,\n",
-       "        \u001b[32m'pr'\u001b[0m: \u001b[32m'camelsgb_33039_2000-08-01_2005-08-31_pr.nc'\u001b[0m,\n",
-       "        \u001b[32m'tasmin'\u001b[0m: \u001b[32m'camelsgb_33039_2000-08-01_2005-08-31_tasmin.nc'\u001b[0m,\n",
-       "        \u001b[32m'evspsblpot'\u001b[0m: \u001b[32m'camelsgb_33039_2000-08-01_2005-08-31_evspsblpot.nc'\u001b[0m,\n",
-       "        \u001b[32m'tasmax'\u001b[0m: \u001b[32m'camelsgb_33039_2000-08-01_2005-08-31_tasmax.nc'\u001b[0m\n",
-       "    \u001b[1m}\u001b[0m\n",
-       "\u001b[1m)\u001b[0m\n"
+       "\u001B[1;35mCaravanForcing\u001B[0m\u001B[1m(\u001B[0m\n",
+       "    \u001B[33mstart_time\u001B[0m=\u001B[32m'2000-08-01T00:00:00Z'\u001B[0m,\n",
+       "    \u001B[33mend_time\u001B[0m=\u001B[32m'2005-08-31T00:00:00Z'\u001B[0m,\n",
+       "    \u001B[33mdirectory\u001B[0m=\u001B[1;35mPosixPath\u001B[0m\u001B[1m(\u001B[0m\u001B[32m'/home/mmelotto/forcing/camelsgb_33039/caravan'\u001B[0m\u001B[1m)\u001B[0m,\n",
+       "    \u001B[33mshape\u001B[0m=\u001B[1;35mPosixPath\u001B[0m\u001B[1m(\u001B[0m\u001B[32m'/home/mmelotto/forcing/camelsgb_33039/caravan/camelsgb_33039.shp'\u001B[0m\u001B[1m)\u001B[0m,\n",
+       "    \u001B[33mfilenames\u001B[0m=\u001B[1m{\u001B[0m\n",
+       "        \u001B[32m'Q'\u001B[0m: \u001B[32m'camelsgb_33039_2000-08-01_2005-08-31_Q.nc'\u001B[0m,\n",
+       "        \u001B[32m'tas'\u001B[0m: \u001B[32m'camelsgb_33039_2000-08-01_2005-08-31_tas.nc'\u001B[0m,\n",
+       "        \u001B[32m'pr'\u001B[0m: \u001B[32m'camelsgb_33039_2000-08-01_2005-08-31_pr.nc'\u001B[0m,\n",
+       "        \u001B[32m'tasmin'\u001B[0m: \u001B[32m'camelsgb_33039_2000-08-01_2005-08-31_tasmin.nc'\u001B[0m,\n",
+       "        \u001B[32m'evspsblpot'\u001B[0m: \u001B[32m'camelsgb_33039_2000-08-01_2005-08-31_evspsblpot.nc'\u001B[0m,\n",
+       "        \u001B[32m'tasmax'\u001B[0m: \u001B[32m'camelsgb_33039_2000-08-01_2005-08-31_tasmax.nc'\u001B[0m\n",
+       "    \u001B[1m}\u001B[0m\n",
+       "\u001B[1m)\u001B[0m\n"
       ]
      },
      "metadata": {},
@@ -188,10 +187,10 @@
     "It contains everything we gave it with also the shapefile of the camels catchment.\n",
     "It contains the (daily) forcing data for:\n",
     "1. Q: the discharge\n",
-    "2. tas: the temperature\n",
-    "3. pr: precipitation\n",
-    "4. tasmin: the minimum temperature for the day\n",
-    "5. evspsblpot: The potential evaporation\n",
+    "2. pr: precipitation\n",
+    "3. evspsblpot: The potential evaporation\n",
+    "4. tas: the temperature\n",
+    "5. tasmin: the minimum temperature for the day\n",
     "6. tasmax: maximum temperature for the day\n",
     "\n",
     "Now if we want to load the data we run the following:"
@@ -223,20 +222,20 @@
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1;35mCaravanForcing\u001b[0m\u001b[1m(\u001b[0m\n",
-       "    \u001b[33mstart_time\u001b[0m=\u001b[32m'2000-08-01T00:00:00Z'\u001b[0m,\n",
-       "    \u001b[33mend_time\u001b[0m=\u001b[32m'2005-08-31T00:00:00Z'\u001b[0m,\n",
-       "    \u001b[33mdirectory\u001b[0m=\u001b[1;35mPosixPath\u001b[0m\u001b[1m(\u001b[0m\u001b[32m'/home/mmelotto/forcing/camelsgb_33039/caravan'\u001b[0m\u001b[1m)\u001b[0m,\n",
-       "    \u001b[33mshape\u001b[0m=\u001b[1;35mPosixPath\u001b[0m\u001b[1m(\u001b[0m\u001b[32m'/home/mmelotto/forcing/camelsgb_33039/caravan/camelsgb_33039.shp'\u001b[0m\u001b[1m)\u001b[0m,\n",
-       "    \u001b[33mfilenames\u001b[0m=\u001b[1m{\u001b[0m\n",
-       "        \u001b[32m'Q'\u001b[0m: \u001b[32m'camelsgb_33039_2000-08-01_2005-08-31_Q.nc'\u001b[0m,\n",
-       "        \u001b[32m'tas'\u001b[0m: \u001b[32m'camelsgb_33039_2000-08-01_2005-08-31_tas.nc'\u001b[0m,\n",
-       "        \u001b[32m'pr'\u001b[0m: \u001b[32m'camelsgb_33039_2000-08-01_2005-08-31_pr.nc'\u001b[0m,\n",
-       "        \u001b[32m'tasmin'\u001b[0m: \u001b[32m'camelsgb_33039_2000-08-01_2005-08-31_tasmin.nc'\u001b[0m,\n",
-       "        \u001b[32m'evspsblpot'\u001b[0m: \u001b[32m'camelsgb_33039_2000-08-01_2005-08-31_evspsblpot.nc'\u001b[0m,\n",
-       "        \u001b[32m'tasmax'\u001b[0m: \u001b[32m'camelsgb_33039_2000-08-01_2005-08-31_tasmax.nc'\u001b[0m\n",
-       "    \u001b[1m}\u001b[0m\n",
-       "\u001b[1m)\u001b[0m\n"
+       "\u001B[1;35mCaravanForcing\u001B[0m\u001B[1m(\u001B[0m\n",
+       "    \u001B[33mstart_time\u001B[0m=\u001B[32m'2000-08-01T00:00:00Z'\u001B[0m,\n",
+       "    \u001B[33mend_time\u001B[0m=\u001B[32m'2005-08-31T00:00:00Z'\u001B[0m,\n",
+       "    \u001B[33mdirectory\u001B[0m=\u001B[1;35mPosixPath\u001B[0m\u001B[1m(\u001B[0m\u001B[32m'/home/mmelotto/forcing/camelsgb_33039/caravan'\u001B[0m\u001B[1m)\u001B[0m,\n",
+       "    \u001B[33mshape\u001B[0m=\u001B[1;35mPosixPath\u001B[0m\u001B[1m(\u001B[0m\u001B[32m'/home/mmelotto/forcing/camelsgb_33039/caravan/camelsgb_33039.shp'\u001B[0m\u001B[1m)\u001B[0m,\n",
+       "    \u001B[33mfilenames\u001B[0m=\u001B[1m{\u001B[0m\n",
+       "        \u001B[32m'Q'\u001B[0m: \u001B[32m'camelsgb_33039_2000-08-01_2005-08-31_Q.nc'\u001B[0m,\n",
+       "        \u001B[32m'tas'\u001B[0m: \u001B[32m'camelsgb_33039_2000-08-01_2005-08-31_tas.nc'\u001B[0m,\n",
+       "        \u001B[32m'pr'\u001B[0m: \u001B[32m'camelsgb_33039_2000-08-01_2005-08-31_pr.nc'\u001B[0m,\n",
+       "        \u001B[32m'tasmin'\u001B[0m: \u001B[32m'camelsgb_33039_2000-08-01_2005-08-31_tasmin.nc'\u001B[0m,\n",
+       "        \u001B[32m'evspsblpot'\u001B[0m: \u001B[32m'camelsgb_33039_2000-08-01_2005-08-31_evspsblpot.nc'\u001B[0m,\n",
+       "        \u001B[32m'tasmax'\u001B[0m: \u001B[32m'camelsgb_33039_2000-08-01_2005-08-31_tasmax.nc'\u001B[0m\n",
+       "    \u001B[1m}\u001B[0m\n",
+       "\u001B[1m)\u001B[0m\n"
       ]
      },
      "metadata": {},
@@ -277,12 +276,12 @@
     }
    ],
    "source": [
-    "camels_data = { 'discharge Q': xr.open_dataset(camels_forcing['Q']),\n",
-    "                'temperature tas': xr.open_dataset(camels_forcing['tas']),\n",
-    "                'precipitation pr': xr.open_dataset(camels_forcing['pr']),\n",
-    "                'minimum_temperature tasmin': xr.open_dataset(camels_forcing['tasmin']),\n",
-    "                'potential_evaporation evspsblpot': xr.open_dataset(camels_forcing['evspsblpot']),\n",
-    "                'maximum_temperature tasmax': xr.open_dataset(camels_forcing['tasmax'])\n",
+    "camels_data = {'discharge Q': xr.open_dataset(camels_forcing['Q']),\n",
+    "               'temperature tas': xr.open_dataset(camels_forcing['tas']),\n",
+    "               'precipitation pr': xr.open_dataset(camels_forcing['pr']),\n",
+    "               'minimum_temperature tasmin': xr.open_dataset(camels_forcing['tasmin']),\n",
+    "               'potential_evaporation evspsblpot': xr.open_dataset(camels_forcing['evspsblpot']),\n",
+    "               'maximum_temperature tasmax': xr.open_dataset(camels_forcing['tasmax'])\n",
     "}\n",
     "\n",
     "plot_counter = 1\n",
@@ -293,7 +292,7 @@
     "    plt.title(f\"{name.split(\" \")[0]}\")\n",
     "    plot_counter+=1\n",
     "\n",
-    "plt.suptitle(\"Camels Data\")\n",
+    "plt.suptitle(\"Camels Data\", fontsize=20)\n",
     "plt.tight_layout()"
    ]
   },
